--- a/Styles/story.css
+++ b/Styles/story.css
@@ -14,7 +14,7 @@ ul, li {
     height: 100vh;
     overflow-y: auto; /* Enable vertical scrolling if content exceeds viewport height */
     background-color: #f2efe8; /* Change the background color to your preference */
-    padding: 20px; /* Add padding for better readability *//
+    padding: 20px; /* Add padding for better readability */
 }
 
 #story h2 {
@@ -33,7 +33,6 @@ ul, li {
     border: 2px solid #a74d00;
     background-color: #f7f5ee;
 }
-
 
 @media (max-width: 500px) {
     #story {
