--- a/Styles/home.css
+++ b/Styles/home.css
@@ -1,13 +1,6 @@
-@font-face {
-    font-family: 'Wedding';
-    src: url('../Fonts/RoyalWedding.otf') format('otf'),
-    url('../Fonts/RoyalWedding.ttf') format('ttf'),
-    url('../Fonts/RoyalWedding.woff') format('woff');
-}
-
 #home {
     height: calc(100vh - 300px); /* Shrink the bottom of the image up */
-    background-image: url('../Images/homescreen.jpeg');
+    background-image: url('../Images/home.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -48,22 +41,25 @@
         border: 0px;
         border-radius: 0px;
         background-position: 48.5% center;
+        height: 100vh;
     }
 
     #home h1 {
         font-size: 5rem;
         margin: 0px;
-        padding-top: 15px;
+        padding-top: 30px;
         padding-inline: 20px;
-        padding-bottom: 0px;
-        text-align: left;
+        text-align: center;
     }
 
     #home h2 {
-        font-size: 2.5rem;
+        font-size: 3.5rem;
+        text-align: center;
+        position: absolute;
+        bottom: 30px;
+        left: 0;
+        right: 0;
         margin: 0px;
-        padding-left: 100px;
-        padding-top: 0px;
-        text-align: left;
+        padding: 0px;
     }
 }
