--- a/Styles/info.css
+++ b/Styles/info.css
@@ -1,20 +1,131 @@
-/* Reset default margin and padding on body */
-body {
-    margin: 0;
-    padding: 0;
-}
-
-/* Reset default margin and padding on the ul and li elements */
-ul, li {
-    margin: 0;
-    padding: 0;
-}
-
-/* Style the Our Story section to cover the entire viewport height and allow scrolling if necessary */
 #info {
-    height: 100vh;
-    overflow-y: auto; /* Enable vertical scrolling if content exceeds viewport height */
-    background-color: #fff; /* Change the background color to your preference */
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    padding: 60px; 
+}
+
+#info h2 {
     color: #5c5442;
-    padding: 20px; /* Add padding for better readability */
+    font-size: 4rem;
+    font-family: 'Header';
+    letter-spacing: 10px;
+    text-align: right;
+    margin: 0;
+}
+
+#info h3 {
+    color: #5c5442;
+    font-size: 2.5rem;
+    font-family: 'Header';
+    letter-spacing: 10px;
+    text-align: left;
+    margin: 40px;
+    margin-left: 20px;
+}
+
+.location-content {
+    display: flex;
+    margin-bottom: 40px;
+}
+
+.location-content p {
+    font-family: 'header';
+    font-size: 1.2rem;
+    color: #5c5442;
+    margin: auto;
+    margin-right: 0;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(167, 77, 0, 0.8);
+    padding: 20px;
+}
+
+.location-content iframe {
+    margin: auto;
+    height: 450px;
+    width: 800px;
+    border: 0;
+    /* box-shadow: 0 0 10px rgba(167, 77, 0, 0.8); */
+}
+
+table {
+    border-collapse: collapse;
+    margin: 20px;
+    margin-inline: 135px;
+    /* box-shadow: 0 0 10px rgba(167, 77, 0, 0.8); */
+}
+th, td {
+    border: 1px solid #ddd;
+    color: #5c5442;
+    font-family: 'Header';
+    font-size: 1.2rem;
+}
+th {
+    background-color: #f2efe8;
+}
+    tr:hover {
+    background-color: #f5f5f5;
+}
+
+.accommodations-content {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px; /* Adjust the gap as needed */
+}
+  
+.quadrant {
+    margin: 20px;
+    margin-inline: 135px;
+    text-align: center;
+    font-family: 'header';
+    font-size: 1.2rem;
+    color: #5c5442;
+}
+
+.top-left {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.top-right {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.bottom-left {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.bottom-right {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.hotel-title {
+    text-decoration: none;
+    font-weight: bolder;
+    color: #5c5442;
+}
+
+.hotel-title:hover {
+    color: #a74d00;
+    font-weight: bolder;
+}
+ 
+
+@media (max-width: 500px) {
+    #info {
+        padding: 10px;
+    }
+
+    #info h2 {
+        padding-top: 0px;
+        font-size: 3.5rem;
+        margin-bottom: 0px;
+        text-align: center;
+    }
 }
