--- a/Styles/home.css
+++ b/Styles/home.css
@@ -17,21 +17,25 @@
 
 #home h1 {
     white-space: pre;
-    transition: opacity 1.8s ease-in-out 1.8s;
+    transition: opacity 2s ease-in-out 2s;
     font-size: 4rem;
     text-align: right;
-    text-shadow: 0 0 20px rgba(229,231,209, 1);
-    margin-top: 50px;
-    margin-right: 70px;
+    text-shadow: 0 0 20px rgba(111,128,124, 0.7);
+    position: absolute;
+    top: 40px;
+    right: 140px;
+    padding: 0;
+    margin: 0;
 }
 
 #home h2 {
-    transition: opacity 2.5s ease-in-out 2.5s;
+    transition: opacity 2s ease-in-out 2s;
     font-size: 2rem;
     text-align: right;
-    text-shadow: 0 0 20px rgba(229,231,209, 1);
-    margin-top: 200px;
-    margin-right: 70px;
+    text-shadow: 0 0 20px rgba(111,128,124, 1);
+    position: absolute;
+    bottom: 340px;
+    right: 140px;
 }
 
 #home.h1-visible h1, #home.h2-visible h2 {
@@ -41,7 +45,6 @@
 .and-font {
     font-family: 'And';
     font-size: 2rem;
-    text-shadow: 0 0 20px rgba(229,231,209, 1);
 }
 
 /* -------------------------- Smaller devices ----------------------------*/
