--- a/Styles/info.css
+++ b/Styles/info.css
@@ -24,50 +24,69 @@
     margin-left: 20px;
 }
 
-.location-content {
-    display: flex;
-    margin-bottom: 40px;
+.location-name {
+    font-family: 'Header';
+    font-size: 1.2rem;
+    letter-spacing: normal;
 }
 
-.location-content p {
+.location-container {
+    display: flex;
+    flex-wrap: wrap; /* Allow items to wrap to the next line */
+    margin-bottom: 40px;
+    margin-inline: 60px;
+}
+  
+.location-container p {
+    flex: 1; /* Allow the iframe to grow as the window size decreases */
     font-family: 'header';
     font-size: 1.2rem;
     color: #5c5442;
-    margin: auto;
-    margin-right: 0;
     text-align: center;
     box-shadow: 0 0 10px rgba(167, 77, 0, 0.8);
-    padding: 20px;
+    padding: 40px;
+    margin: 20px;
 }
-
-.location-content iframe {
-    margin: auto;
-    height: 450px;
-    width: 800px;
+  
+.location-container iframe {
+    flex: 2; 
+    height: auto;
+    width: 100%;
     border: 0;
-    /* box-shadow: 0 0 10px rgba(167, 77, 0, 0.8); */
-}
+    margin: 20px;
+}  
 
 table {
+    width: 85%; /* Make the table width 100% of its container */
     border-collapse: collapse;
-    margin: 20px;
-    margin-inline: 135px;
-    /* box-shadow: 0 0 10px rgba(167, 77, 0, 0.8); */
+    margin: 20px auto;
 }
+
 th, td {
+    white-space: normal; /* Allow text to wrap */
+    word-wrap: break-word; /* Break long words if necessary */
     border: 1px solid #ddd;
     color: #5c5442;
     font-family: 'Header';
     font-size: 1.2rem;
-}
-th {
-    background-color: #f2efe8;
-}
-    tr:hover {
-    background-color: #f5f5f5;
+    padding: 5px;
 }
 
-.accommodations-content {
+th {
+    background-color: rgba(167, 77, 0, 0.3);
+}
+
+tr:hover {
+    background-color: rgba(167, 77, 0, 0.1);
+}
+
+.table-note {
+    font-family: 'Header';
+    color: #5c5442;
+    text-align: center;
+}
+
+.accommodations-container {
     width: 100%;
     height: 100%;
     display: grid;
@@ -77,7 +96,7 @@ th {
 }
   
 .quadrant {
-    margin: 20px;
+    margin: 40px;
     margin-inline: 135px;
     text-align: center;
     font-family: 'header';
@@ -105,13 +124,12 @@ th {
     grid-row: 2;
 }
 
-.hotel-title {
+.hotels {
     text-decoration: none;
-    font-weight: bolder;
     color: #5c5442;
 }
 
-.hotel-title:hover {
+.hotels:hover {
     color: #a74d00;
     font-weight: bolder;
 }
