--- a/Styles/gallery.css
+++ b/Styles/gallery.css
@@ -12,6 +12,7 @@
     font-family: 'Header';
     letter-spacing: 10px;
     text-align: center;
+    padding: 30px;
     margin: 0;
 }
 
@@ -21,7 +22,7 @@
 }
 
 .gallery-column {
-    flex: 25%;
+    flex: 10%;
     padding: 5px;
 }
 
